# H_W_Django

./: .env.sample  README.md  catalog.json  groups.json  manage.py  pyproject.toml
H_W_Django/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: catalog_data.json  fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0002_product_manufactured_at.py  0003_alter_product_price.py  0004_blog.py  0005_alter_blog_views_count.py  0006_version.py  0007_alter_version_options.py  0008_product_owner.py  0009_alter_product_options.py  0010_product_is_published.py  0011_alter_product_options.py
catalog/templates/: base.html
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  contact_info.html  index.html  product_confirm_delete.html  product_create.html  product_detail.html  product_form.html  product_list.html  version_confirm_delete.html  version_detail.html  version_form.html  version_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_form.html  user_form.html
